bezpieczenstwo-k8s/day2/network-policy/pod.yaml
kind: Pod
apiVersion: v1
metadata:
  name: test-app
  namespace: default
  labels:
    role: app
spec:
  containers:
  - name: foo-app
    image: alpine
    command:
      - "sleep"
      - "604800"
